--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-ejs-layouts": "^2.5.0",
     "foundation-sites": "^6.6.0",
     "jquery": "^3.4.1",
+    "lozad": "^1.14.0",
     "motion-ui": "~2.0.0",
     "what-input": "^5.1.2"
   },
